tests/ui/associated-types/associated-types-incomplete-object.stderr
error[E0191]: the value of the associated type `B` in `Foo` must be specified
  --> $DIR/associated-types-incomplete-object.rs:23:30
   |
LL |     type B;
   |     ------ `B` defined here
...
LL |     let b = &42isize as &dyn Foo<A=usize>;
   |                              ^^^^^^^^^^^^ help: specify the associated type: `Foo<A=usize, B = Type>`

error[E0191]: the value of the associated type `A` in `Foo` must be specified
  --> $DIR/associated-types-incomplete-object.rs:26:30
   |
LL |     type A;
   |     ------ `A` defined here
...
LL |     let c = &42isize as &dyn Foo<B=char>;
   |                              ^^^^^^^^^^^ help: specify the associated type: `Foo<B=char, A = Type>`

error[E0191]: the value of the associated types `A` and `B` in `Foo` must be specified
  --> $DIR/associated-types-incomplete-object.rs:29:30
   |
LL |     type A;
   |     ------ `A` defined here
LL |     type B;
   |     ------ `B` defined here
...
LL |     let d = &42isize as &dyn Foo;
   |                              ^^^ help: specify the associated types: `Foo<A = Type, B = Type>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0191`.
